@@ -80,6 +80,23 @@
         },
         {
           "type": "minecraft:item",
+          "name": "minecraft:compass",
+          "weight": 1,
+          "quality": 1,
+          "functions": [
+            {
+              "function": "minecraft:enchant_randomly",
+              "options": [
+                "interstellar_structures:drift_waystone",
+                "interstellar_structures:rift_waystone"
+              ],
+              "only_compatible": false
+            }
+          ],
+          "conditions": []
+        },
+        {
+          "type": "minecraft:item",
           "name": "minecraft:netherite_ingot",
           "weight": 1,
           "functions": [
@@ -122,7 +139,9 @@
                 "interstellar_structures:hover_jets",
                 "interstellar_structures:nanite_cooling",
                 "interstellar_structures:nanite_reinforcement",
-                "interstellar_structures:repulsion"
+                "interstellar_structures:repulsion",
+                "interstellar_structures:hydro_jets",
+                "interstellar_structures:shrink_ray"
               ],
               "only_compatible": true
             }
