@@ -27,7 +27,13 @@
     "music_volume": 1,
     "sky_color": 7254527,
     "water_color": 4159204,
-    "water_fog_color": 329011
+    "water_fog_color": 329011,
+    "particle": {
+      "options": {
+        "type": "minecraft:ash"
+      },
+      "probability": 0.65
+    }
   },
   "features": [
     [],
@@ -81,7 +87,6 @@
     ],
     [],
     [
-      "minecraft:spring_water",
       "minecraft:spring_lava"
     ],
     [
@@ -150,6 +155,12 @@
         "maxCount": 4,
         "minCount": 4,
         "weight": 80
+      },
+       {
+        "type": "minecraft:blaze",
+        "maxCount": 4,
+        "minCount": 4,
+        "weight": 30
       }
     ],
     "underground_water_creature": [
